--- a/tex/Relatório Parcial/proj.bib
+++ b/tex/Relatório Parcial/proj.bib
@@ -108,3 +108,36 @@
   year={2012},
   publisher={Lulu. com}
 }
+
+
+@article{kulldorff2006elliptic,
+  title={An elliptic spatial scan statistic},
+  author={Kulldorff, Martin and Huang, Lan and Pickle, Linda and Duczmal, Luiz},
+  journal={Statistics in medicine},
+  volume={25},
+  number={22},
+  pages={3929--3943},
+  year={2006},
+  publisher={Wiley Online Library}
+}
+
+
+@inproceedings{shi2001particle,
+  title={Particle swarm optimization: developments, applications and resources},
+  author={Shi, Yuhui and others},
+  booktitle={evolutionary computation, 2001. Proceedings of the 2001 Congress on},
+  volume={1},
+  pages={81--86},
+  year={2001},
+  organization={IEEE}
+}
+
+@incollection{beni1993swarm,
+  title={Swarm intelligence in cellular robotic systems},
+  author={Beni, Gerardo and Wang, Jing},
+  booktitle={Robots and Biological Systems: Towards a New Bionics?},
+  pages={703--712},
+  year={1993},
+  publisher={Springer}
+}
+
